Changed medium link

--- a/html/card.html
+++ b/html/card.html
@@ -138,7 +138,7 @@
                                     <p><b><font color="black" style="font-size: 20px;"font-family: Tahoma;">
                                     WANT TO SEND CARDS TOO?
                                     </font></b></p>
-                                    <a href="https://medium.com/@jeerawatchuachan/b489b0acd29f" target="_blank"
+                                    <a href="https://medium.com/airesearch-in-th/%E0%B9%83%E0%B8%8A%E0%B9%89-python-%E0%B8%AA%E0%B9%88%E0%B8%87-new-year-card-%E0%B8%9C%E0%B9%88%E0%B8%B2%E0%B8%99-email-%E0%B8%94%E0%B9%89%E0%B8%A7%E0%B8%A2-package-sorkorsor-%E0%B8%81%E0%B8%B1%E0%B8%99%E0%B9%80%E0%B8%96%E0%B8%AD%E0%B8%B0-b489b0acd29f" target="_blank"
                                     style="background-color: #000000;
                                             background-image: linear-gradient(to top#000000,, #000000);
                                             border: 1px solid #ffffff;
